Atualiização de nomenclaturas

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <div id="atuacoesModal" class="fullscreen-modal modal--hidden">
         <div class="fullscreen-modal-header">
-            <h2>Minhas Atuações e Conquistas</h2>
+            <h2>Minhas Atuações</h2>
             <span class="close-btn" data-modal-id="atuacoesModal">&times;</span>
         </div>
         <div id="atuacoes-list" class="editable-item-list"></div>
@@ -83,7 +83,7 @@
     </div>
     <div id="desenvolvimentoModal" class="fullscreen-modal modal--hidden">
         <div class="fullscreen-modal-header">
-            <h2>Meu Plano de Desenvolvimento</h2>
+            <h2>Meus Projetos</h2>
             <span class="close-btn" data-modal-id="desenvolvimentoModal">&times;</span>
         </div>
         <div id="desenvolvimento-list" class="editable-item-list"></div>
