--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div id="group-status" class="metrics-group">
             <h2 class="group-header collapsed">
-                <span>📌 Status</span>
+                <span>Status</span>
                 <span class="toggle-icon">+</span>
             </h2>
             <div id="status-group-content" class="group-content collapsed">
@@ -122,7 +122,7 @@
 
         <div id="group-estrategico" class="metrics-group">
             <h2 class="group-header collapsed">
-                <span>🧠 Estratégico</span>
+                <span></span>Itens</span>
                 <span class="toggle-icon">+</span>
             </h2>
             <div id="estrategico-group-content" class="group-content collapsed">
@@ -131,7 +131,7 @@
 
         <div id="group-clientes" class="metrics-group">
             <h2 class="group-header collapsed">
-                <span>🧩 Clientes</span>
+                <span>Clientes</span>
                 <span class="toggle-icon">+</span>
             </h2>
             <div id="clientes-group-content" class="group-content collapsed">
@@ -140,7 +140,7 @@
         
         <div id="group-tags" class="metrics-group">
             <h2 class="group-header collapsed">
-                <span>🏷️ Tags</span>
+                <span>Tags</span>
                 <span class="toggle-icon">+</span>
             </h2>
             <div id="tags-group-content" class="group-content collapsed">
