--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div id="group-estrategico" class="metrics-group">
             <h2 class="group-header collapsed">
-                <span></span>Itens</span>
+                <span>Itens</span>
                 <span class="toggle-icon">+</span>
             </h2>
             <div id="estrategico-group-content" class="group-content collapsed">
